src/codemirror.less
.ͼ1.cm-focused {
  outline: 1px dotted #212121;
}
.ͼ1 {
  position: relative !important;
  box-sizing: border-box;
  display: flex !important;
  flex-direction: column;
}
.ͼ1 .cm-scroller {
  display: flex !important;
  align-items: flex-start !important;
  font-family: monospace;
  line-height: 1.4;
  height: 100%;
  overflow-x: auto;
  position: relative;
  z-index: 0;
  overflow-anchor: none;
}
.ͼ1 .cm-content[contenteditable="true"] {
  -webkit-user-modify: read-write-plaintext-only;
}
.ͼ1 .cm-content {
  margin: 0;
  flex-grow: 2;
  flex-shrink: 0;
  display: block;
  white-space: pre;
  word-wrap: normal;
  box-sizing: border-box;
  min-height: 100%;
  padding: 4px 0;
  outline: none;
}
.ͼ1 .cm-lineWrapping {
  white-space: pre-wrap;
  white-space: break-spaces;
  word-break: break-word;
  overflow-wrap: anywhere;
  flex-shrink: 1;
}
.ͼ2 .cm-content {
  caret-color: black;
}
.ͼ3 .cm-content {
  caret-color: white;
}
.ͼ1 .cm-line {
  display: block;
  padding: 0 2px 0 6px;
}
.ͼ1 .cm-layer > * {
  position: absolute;
}
.ͼ1 .cm-layer {
  position: absolute;
  left: 0;
  top: 0;
  contain: size style;
}
.ͼ2 .cm-selectionBackground {
  background: #d9d9d9;
}
.ͼ3 .cm-selectionBackground {
  background: #222;
}
.ͼ2.cm-focused > .cm-scroller > .cm-selectionLayer .cm-selectionBackground {
  background: #d7d4f0;
}
.ͼ3.cm-focused > .cm-scroller > .cm-selectionLayer .cm-selectionBackground {
  background: #233;
}
.ͼ1 .cm-cursorLayer {
  pointer-events: none;
}
.ͼ1.cm-focused > .cm-scroller > .cm-cursorLayer {
  animation: steps(1) cm-blink 1.2s infinite;
}
@keyframes cm-blink {
  50% {
    opacity: 0;
  }
}
@keyframes cm-blink2 {
  50% {
    opacity: 0;
  }
}
.ͼ1 .cm-cursor,
.ͼ1 .cm-dropCursor {
  border-left: 1.2px solid black;
  margin-left: -0.6px;
  pointer-events: none;
}
.ͼ1 .cm-cursor {
  display: none;
}
.ͼ3 .cm-cursor {
  border-left-color: #ddd;
}
.ͼ1 .cm-dropCursor {
  position: absolute;
}
.ͼ1.cm-focused > .cm-scroller > .cm-cursorLayer .cm-cursor {
  display: block;
}
.ͼ1 .cm-iso {
  unicode-bidi: isolate;
}
.ͼ1 .cm-announced {
  position: fixed;
  top: -10000px;
}
@media print {
  .ͼ1 .cm-announced {
    display: none;
  }
}
.ͼ2 .cm-activeLine {
  background-color: #cceeff44;
}
.ͼ3 .cm-activeLine {
  background-color: #99eeff33;
}
.ͼ2 .cm-specialChar {
  color: red;
}
.ͼ3 .cm-specialChar {
  color: #f78;
}
.ͼ1 .cm-gutters {
  flex-shrink: 0;
  display: flex;
  height: 100%;
  box-sizing: border-box;
  z-index: 200;
}
.ͼ1 .cm-gutters-before {
  inset-inline-start: 0;
}
.ͼ1 .cm-gutters-after {
  inset-inline-end: 0;
}
.ͼ2 .cm-gutters.cm-gutters-before {
  border-right-width: 1px;
}
.ͼ2 .cm-gutters.cm-gutters-after {
  border-left-width: 1px;
}
.ͼ2 .cm-gutters {
  background-color: #f5f5f5;
  color: #6c6c6c;
  border: 0px solid #ddd;
}
.ͼ3 .cm-gutters {
  background-color: #333338;
  color: #ccc;
}
.ͼ1 .cm-gutter {
  display: flex !important;
  flex-direction: column;
  flex-shrink: 0;
  box-sizing: border-box;
  min-height: 100%;
  overflow: hidden;
}
.ͼ1 .cm-gutterElement {
  box-sizing: border-box;
}
.ͼ1 .cm-lineNumbers .cm-gutterElement {
  padding: 0 3px 0 5px;
  min-width: 20px;
  text-align: right;
  white-space: nowrap;
}
.ͼ2 .cm-activeLineGutter {
  background-color: #e2f2ff;
}
.ͼ3 .cm-activeLineGutter {
  background-color: #222227;
}
.ͼ1 .cm-panels {
  box-sizing: border-box;
  position: sticky;
  left: 0;
  right: 0;
  z-index: 300;
}
.ͼ2 .cm-panels {
  background-color: #f5f5f5;
  color: black;
}
.ͼ2 .cm-panels-top {
  border-bottom: 1px solid #ddd;
}
.ͼ2 .cm-panels-bottom {
  border-top: 1px solid #ddd;
}
.ͼ3 .cm-panels {
  background-color: #333338;
  color: white;
}
.ͼ1 .cm-dialog label {
  font-size: 80%;
}
.ͼ1 .cm-dialog {
  padding: 2px 19px 4px 6px;
  position: relative;
}
.ͼ1 .cm-dialog-close {
  position: absolute;
  top: 3px;
  right: 4px;
  background-color: inherit;
  border: none;
  font: inherit;
  font-size: 14px;
  padding: 0;
}
.ͼ1 .cm-tab {
  display: inline-block;
  overflow: hidden;
  vertical-align: bottom;
}
.ͼ1 .cm-widgetBuffer {
  vertical-align: text-top;
  height: 1em;
  width: 0;
  display: inline;
}
.ͼ1 .cm-placeholder {
  color: #888;
  display: inline-block;
  vertical-align: top;
  user-select: none;
}
.ͼ1 .cm-highlightSpace {
  background-image: radial-gradient(
    circle at 50% 55%,
    #aaa 20%,
    transparent 5%
  );
  background-position: center;
}
.ͼ1 .cm-highlightTab {
  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="200" height="20"><path stroke="%23888" stroke-width="1" fill="none" d="M1 10H196L190 5M190 15L196 10M197 4L197 16"/></svg>');
  background-size: auto 100%;
  background-position: right 90%;
  background-repeat: no-repeat;
}
.ͼ1 .cm-trailingSpace {
  background-color: #ff332255;
}
.ͼ1 .cm-button {
  vertical-align: middle;
  color: inherit;
  font-size: 70%;
  padding: 0.2em 1em;
  border-radius: 1px;
}
.ͼ2 .cm-button:active {
  background-image: linear-gradient(#b4b4b4, #d0d3d6);
}
.ͼ2 .cm-button {
  background-image: linear-gradient(#eff1f5, #d9d9df);
  border: 1px solid #888;
}
.ͼ3 .cm-button:active {
  background-image: linear-gradient(#111, #333);
}
.ͼ3 .cm-button {
  background-image: linear-gradient(#393939, #111);
  border: 1px solid #888;
}
.ͼ1 .cm-textfield {
  vertical-align: middle;
  color: inherit;
  font-size: 70%;
  border: 1px solid silver;
  padding: 0.2em 0.5em;
}
.ͼ2 .cm-textfield {
  background-color: white;
}
.ͼ3 .cm-textfield {
  border: 1px solid #555;
  background-color: inherit;
}
.ͼ1.cm-focused .cm-matchingBracket {
  background-color: #328c8252;
}
.ͼ1.cm-focused .cm-nonmatchingBracket {
  background-color: #bb555544;
}
.ͼ1 .cm-foldPlaceholder {
  background-color: #eee;
  border: 1px solid #ddd;
  color: #888;
  border-radius: 0.2em;
  margin: 0 1px;
  padding: 0 1px;
  cursor: pointer;
}
.ͼ1 .cm-foldGutter span {
  padding: 0 1px;
  cursor: pointer;
}
.ͼ15 {
  height: 100%;
  font-size: 13px;
}
.ͼ15 .cm-scroller {
  overflow: auto;
}
.ͼ15 .cm-content {
  font-family: "Fira Code", "Consolas", monospace;
}
.ͼp {
  color: #c678dd;
}
.ͼq {
  color: #e06c75;
}
.ͼr {
  color: #61afef;
}
.ͼs {
  color: #d19a66;
}
.ͼt {
  color: #abb2bf;
}
.ͼu {
  color: #e5c07b;
}
.ͼv {
  color: #56b6c2;
}
.ͼw {
  color: #7d8799;
}
.ͼx {
  font-weight: bold;
}
.ͼy {
  font-style: italic;
}
.ͼz {
  text-decoration: line-through;
}
.ͼ10 {
  color: #7d8799;
  text-decoration: underline;
}
.ͼ11 {
  font-weight: bold;
  color: #e06c75;
}
.ͼ12 {
  color: #d19a66;
}
.ͼ13 {
  color: #98c379;
}
.ͼ14 {
  color: #ffffff;
}
.ͼo {
  color: #abb2bf;
  background-color: #282c34;
}
.ͼo .cm-content {
  caret-color: #528bff;
}
.ͼo .cm-cursor,
.ͼo .cm-dropCursor {
  border-left-color: #528bff;
}
.ͼo.cm-focused > .cm-scroller > .cm-selectionLayer .cm-selectionBackground,
.ͼo .cm-selectionBackground,
.ͼo .cm-content ::selection {
  background-color: #3e4451;
}
.ͼo .cm-panels {
  background-color: #21252b;
  color: #abb2bf;
}
.ͼo .cm-panels.cm-panels-top {
  border-bottom: 2px solid black;
}
.ͼo .cm-panels.cm-panels-bottom {
  border-top: 2px solid black;
}
.ͼo .cm-searchMatch {
  background-color: #72a1ff59;
  outline: 1px solid #457dff;
}
.ͼo .cm-searchMatch.cm-searchMatch-selected {
  background-color: #6199ff2f;
}
.ͼo .cm-activeLine {
  background-color: #6699ff0b;
}
.ͼo .cm-selectionMatch {
  background-color: #aafe661a;
}
.ͼo.cm-focused .cm-matchingBracket,
.ͼo.cm-focused .cm-nonmatchingBracket {
  background-color: #bad0f847;
}
.ͼo .cm-gutters {
  background-color: #282c34;
  color: #7d8799;
  border: none;
}
.ͼo .cm-activeLineGutter {
  background-color: #2c313a;
}
.ͼo .cm-foldPlaceholder {
  background-color: transparent;
  border: none;
  color: #ddd;
}
.ͼo .cm-tooltip {
  border: none;
  background-color: #353a42;
}
.ͼo .cm-tooltip .cm-tooltip-arrow:before {
  border-top-color: transparent;
  border-bottom-color: transparent;
}
.ͼo .cm-tooltip .cm-tooltip-arrow:after {
  border-top-color: #353a42;
  border-bottom-color: #353a42;
}
.ͼo .cm-tooltip-autocomplete > ul > li[aria-selected] {
  background-color: #2c313a;
  color: #abb2bf;
}
.ͼ5 {
  color: #404740;
}
.ͼ6 {
  text-decoration: underline;
}
.ͼ7 {
  text-decoration: underline;
  font-weight: bold;
}
.ͼ8 {
  font-style: italic;
}
.ͼ9 {
  font-weight: bold;
}
.ͼa {
  text-decoration: line-through;
}
.ͼb {
  color: #708;
}
.ͼc {
  color: #219;
}
.ͼd {
  color: #164;
}
.ͼe {
  color: #a11;
}
.ͼf {
  color: #e40;
}
.ͼg {
  color: #00f;
}
.ͼh {
  color: #30a;
}
.ͼi {
  color: #085;
}
.ͼj {
  color: #167;
}
.ͼk {
  color: #256;
}
.ͼl {
  color: #00c;
}
.ͼm {
  color: #940;
}
.ͼn {
  color: #f00;
}
.ͼ4 .cm-line ::selection,
.ͼ4 .cm-line::selection {
  background-color: transparent !important;
}
.ͼ4 .cm-line {
  caret-color: transparent !important;
}
.ͼ4 .cm-content :focus::selection,
.ͼ4 .cm-content :focus ::selection {
  background-color: Highlight !important;
}
.ͼ4 .cm-content :focus {
  caret-color: initial !important;
}
.ͼ4 .cm-content {
  caret-color: transparent !important;
}

